--- a/索引.html
+++ b/索引.html
@@ -53,7 +53,7 @@
       <p style="font-size: 14px;">欢迎扫码关注公众号</p>
     </div>
     <div id="copyright">
-      <p>© 2011-2023  <a href="https://jace.me">Jace.me</a>. All Rights Reserved.</p>
+      <p>© 2011-2023  <a href="https://daydreamlabs.com">Daydream Labs</a>. All Rights Reserved. <a href="https://beian.miit.gov.cn">浙ICP备17051194号-7</a></p>
     </div>
   </body>
 </html>
