--- a/index.html
+++ b/index.html
@@ -1,57 +1,78 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>Daydream Labs</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-      body {
-        background-color: #FFFFFF;
-        font-family: Arial, sans-serif;
-      }
-      #qr-code {
-        display: block;
-        margin: 50px auto;
-        width: 80%;
-        max-width: 300px;
-      }
-      #qr-code img {
-        width: 100%;
-        height: auto;
-      }
-      #qr-text {
-        text-align: center;
-        font-size: 16px;
-        margin-bottom: 50px;
-      }
-      #copyright {
-        position: fixed;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        text-align: center;
-        font-size: 12px;
-        color: #777;
-        padding: 10px;
-        background-color: #FFFFFF;
-      }
-      /* 媒体查询 */
-      @media only screen and (min-width: 768px) {
-        /* 在大屏幕上使用更大的二维码 */
-        #qr-code {
-          width: 40%;
-          max-width: 200px;
-          margin: 50px auto;
-        }
-      }
-    </style>
-  </head>
-  <body>
-    <div id="qr-code">
-      <img src="https://jace.me/qr%403x.png" alt="QR Code">
-    </div>
-    <div id="qr-text">
-      <p style="font-size: 14px;">欢迎扫码关注公众号</p>
-    </div>
+<head>
+	<title>Daydream Labs</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+	<header>
+		<div class="logo">
+			<img src="logo.png" alt="Company Logo">
+		</div>
+		<nav>
+			<ul>
+				<li><a href="#home">首页</a></li>
+				<li><a href="#products">产品列表</a></li>
+				<li><a href="#about">关于我们</a></li>
+			</ul>
+		</nav>
+	</header>
+	
+	<main>
+		<section id="home">
+			<h1>欢迎来到我们的公司主页！</h1>
+			<p>我们提供以下产品和服务：</p>
+			<ul>
+				<li>
+					<h2>产品1名称</h2>
+					<p>产品1介绍</p>
+					<img src="product1.png" alt="产品1">
+				</li>
+				<li>
+					<h2>产品2名称</h2>
+					<p>产品2介绍</p>
+					<img src="product2.png" alt="产品2">
+				</li>
+				<li>
+					<h2>产品3名称</h2>
+					<p>产品3介绍</p>
+					<img src="product3.png" alt="产品3">
+				</li>
+			</ul>
+		</section>
+		
+		<section id="products">
+			<h1>我们的产品</h1>
+			<p>（列出产品列表，每个产品有一张配图和简要介绍。）</p>
+			<ul>
+				<li>
+					<h2>产品1名称</h2>
+					<p>产品1介绍</p>
+					<img src="product1.png" alt="产品1">
+				</li>
+				<li>
+					<h2>产品2名称</h2>
+					<p>产品2介绍</p>
+					<img src="product2.png" alt="产品2">
+				</li>
+				<li>
+					<h2>产品3名称</h2>
+					<p>产品3介绍</p>
+					<img src="product3.png" alt="产品3">
+				</li>
+			</ul>
+		</section>
+		
+		<section id="about">
+			<h1>关于我们</h1>
+			<p>我们是一支充满激情和创造力的团队。我们的目标是为用户提供优秀的产品和服务，同时让我们的团队成员感到自豪和满足。我们的愿景是成为行业领导者，我们相信这一目标不久就能实现。</p>
+			<p>我们的团队由一群充满激情、经验丰富、才华横溢的专业人士组成。我们拥有广泛的技术和业</p>
+      </section>
+    </main>
+
+
+
+
     <div id="copyright">
       <p>© 2011-2023  <a href="https://daydreamlabs.com">Daydream Labs</a>. All Rights Reserved. <a href="https://beian.miit.gov.cn">浙ICP备17051194号-7</a></p>
     </div>
