--- a/index.html
+++ b/index.html
@@ -62,19 +62,16 @@
 				</li>
 			</ul>
 		</section>
-		
-		<section id="about">
-			<h1>关于我们</h1>
-			<p>我们是一支充满激情和创造力的团队。我们的目标是为用户提供优秀的产品和服务，同时让我们的团队成员感到自豪和满足。我们的愿景是成为行业领导者，我们相信这一目标不久就能实现。</p>
-			<p>我们的团队由一群充满激情、经验丰富、才华横溢的专业人士组成。我们拥有广泛的技术和业</p>
-      </section>
-    </main>
-
-
-
-
-    <div id="copyright">
-      <p>© 2011-2023  <a href="https://daydreamlabs.com">Daydream Labs</a>. All Rights Reserved. <a href="https://beian.miit.gov.cn">浙ICP备17051194号-7</a></p>
-    </div>
-  </body>
+	</main>
+	
+	<footer>
+		<div class="copyright">
+			<p>© 2017-2023 Daydream Labs</p>
+			<p><a href="https://daydreamlabs.com">Daydream Labs</a>. All Rights Reserved. <a href="https://beian.miit.gov.cn" target="_blank">浙ICP备17051194号-7</a></p>
+		</div>
+	</footer>
+	
+</body>
 </html>
+
+
