--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	
 	<footer>
 		<div class="copyright">
-			<p>© 2017-2023 Daydream Labs <a href="https://daydreamlabs.com">Daydream Labs</a>. All Rights Reserved. <a href="https://beian.miit.gov.cn" target="_blank">浙ICP备17051194号-7</a></p>
+			<p>© 2017-2023 <a href="https://daydreamlabs.com">Daydream Labs</a>. All Rights Reserved. <a href="https://beian.miit.gov.cn" target="_blank">浙ICP备17051194号-7</a></p>
 		</div>
 	</footer>
 	
